--- a/roles/zsh/tasks/main.yml
+++ b/roles/zsh/tasks/main.yml
@@ -1,16 +1,43 @@
-# - name: install zsh
-#   apt:
-#     name: zsh
-#     update_cache: yes
+- name: update cache
+  import_role:
+    name: update-apt
 
-# - name: oh my zsh
-#   get_url: 
-#     url: https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh
-#     dest: /home/manparvesh/oh-my-zsh-installer
-#     mode: 0644
+- name: install zsh
+  become: true
+  apt:
+    name: zsh
 
-# - name: install oh my zsh
-#   command: sh /home/manparvesh/oh-my-zsh-installer
+- name: oh my zsh
+  get_url: 
+    url: https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh
+    dest: "{{ home }}/oh-my-zsh-installer"
+    mode: 0644
+
+- name: install oh my zsh
+  command: "sh {{ home }}/oh-my-zsh-installer"
 
 - name: change default shell
-  shell: 'chsh -s $(which zsh)'
+  become: true
+  shell: 'chsh -s /usr/bin/zsh'
+
+- name: clone powerlevel9k theme
+  git:
+    repo: https://github.com/bhilburn/powerlevel9k.git
+    dest: "{{ home }}/.oh-my-zsh/custom/themes/powerlevel9k"
+
+- name: install powerline fonts
+  import_tasks: powerline.yml
+
+- name: clone zsh autosuggestions
+  git:
+    repo: https://github.com/zsh-users/zsh-autosuggestions
+    dest: "{{ home }}/.oh-my-zsh/plugins/zsh-autosuggestions"
+
+- name: change zshrc file
+  sudo: yes
+  template:
+    src: .zshrc
+    dest: "{{ home }}/.zshrc"
+
+- name: source ~/.zshrc
+  shell: "source {{ home }}/.zshrc"
